--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>アクセスを確認中…</title>
-  <script>
-    // JSが有効な人間だけがリダイレクトされる
-    setTimeout(function() {
-      window.location.href = "https://x.com/otonahimatubu";
-    }, 3000);
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>コード選択ページ</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+            text-align: center;
+        }
+        h1 {
+            color: #222;
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        .code-link {
+            display: block;
+            margin: 10px auto;
+            padding: 14px 20px;
+            width: 90%;
+            max-width: 300px;
+            background-color: #007acc;
+            color: white;
+            text-decoration: none;
+            border-radius: 10px;
+            font-size: 18px;
+            transition: background-color 0.2s ease;
+        }
+        .code-link:hover {
+            background-color: #005fa3;
+        }
+    </style>
 </head>
 <body>
-  <h2>確認中です…</h2>
-  <p>自動で移動しない場合は <a href="https://x.com/otonahimatubu">こちら</a> をクリック</p>
+    <h1>コードを選んで進んでください</h1>
+    <a class="code-link" href="https://your-lp.com/z44" target="_blank">Z44 の詳細を見る</a>
+    <a class="code-link" href="https://your-lp.com/p72" target="_blank">P72 の詳細を見る</a>
+    <a class="code-link" href="https://your-lp.com/k17" target="_blank">K17 の詳細を見る</a>
+    <a class="code-link" href="https://your-lp.com/n88" target="_blank">N88 の詳細を見る</a>
+    <a class="code-link" href="https://your-lp.com/s33" target="_blank">S33 の詳細を見る</a>
 </body>
 </html>
