--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
 </head>
 <body>
     <h1>コードを選んで進んでください</h1>
-    <a class="code-link" href="https://x.com/otonahimatubu/status/1918304741114954055" target="_blank">Z44 の詳細を見る</a>
-    <a class="code-link" href="https://x.com/otonahimatubu/status/1915749129286033513" target="_blank">P72 の詳細を見る</a>
-    <a class="code-link" href="https://your-lp.com/k17" target="_blank">K17 の詳細を見る</a>
-    <a class="code-link" href="https://your-lp.com/n88" target="_blank">N88 の詳細を見る</a>
-    <a class="code-link" href="https://your-lp.com/s33" target="_blank">S33 の詳細を見る</a>
+    <a class="code-link" href="https://x.com/otonahimatubu/status/1918304741114954055" target="_blank">A01 の詳細を見る</a>
 </body>
 </html>
