--- a/index.html
+++ b/index.html
@@ -6,38 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>コード選択ページ</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
-            background-color: #f9f9f9;
+        html, body {
             margin: 0;
-            padding: 20px;
-            text-align: center;
+            padding: 0;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #f5f5f5;
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            overflow-y: auto;
         }
         h1 {
-            color: #222;
-            font-size: 24px;
-            margin-bottom: 20px;
+            font-size: 22px;
+            margin: 20px 0 10px;
+            font-weight: 400;
+            color: #e0e0e0;
+        }
+        .container {
+            width: 100%;
+            max-width: 360px;
+            padding: 0 10px 20px;
         }
         .code-link {
             display: block;
-            margin: 10px auto;
-            padding: 14px 20px;
-            width: 90%;
-            max-width: 300px;
-            background-color: #007acc;
-            color: white;
+            width: 100%;
+            padding: 12px 18px;
+            margin: 6px 0;
+            background: linear-gradient(135deg, #444, #222);
+            border: 1px solid #555;
+            border-radius: 8px;
+            text-align: center;
+            color: #f5f5f5;
+            font-size: 16px;
             text-decoration: none;
-            border-radius: 10px;
-            font-size: 18px;
-            transition: background-color 0.2s ease;
+            transition: all 0.2s ease;
         }
         .code-link:hover {
-            background-color: #005fa3;
+            background: linear-gradient(135deg, #555, #333);
+            transform: translateY(-1px);
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.4);
+        }
+        footer {
+            margin: 10px 0 20px;
+            font-size: 11px;
+            color: #888;
         }
     </style>
 </head>
 <body>
-    <h1>コードを選んで進んでください</h1>
-    <a class="code-link" href="https://x.com/otonahimatubu/status/1918304741114954055" target="_blank">A01 の詳細を見る</a>
+    <h1>お探しのコードを選択してください</h1>
+    <div class="container">
+        <a class="code-link" href="https://x.com/otonahimatubu/status/1918304741114954055" target="_blank">A01 の続きを見る</a>
+        <a class="code-link" href="https://your-lp.com/p72" target="_blank">P72 の詳細を見る</a>
+        <a class="code-link" href="https://your-lp.com/k17" target="_blank">K17 の詳細を見る</a>
+        <a class="code-link" href="https://your-lp.com/n88" target="_blank">N88 の詳細を見る</a>
+        <a class="code-link" href="https://your-lp.com/s33" target="_blank">S33 の詳細を見る</a>
+        <a class="code-link" href="https://your-lp.com/a11" target="_blank">A11 の詳細を見る</a>
+        <a class="code-link" href="https://your-lp.com/b22" target="_blank">B22 の詳細を見る</a>
+        <a class="code-link" href="https://your-lp.com/c33" target="_blank">C33 の詳細を見る</a>
+        <a class="code-link" href="https://your-lp.com/d44" target="_blank">D44 の詳細を見る</a>
+        <a class="code-link" href="https://your-lp.com/e55" target="_blank">E55 の詳細を見る</a>
+    </div>
+    <footer>© 2025 OTONANOHIMATSUBUSHI</footer>
 </body>
 </html>
