--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
             margin: 20px 0 10px;
             font-weight: 400;
             color: #e0e0e0;
+            text-align: center;
         }
         .container {
             width: 100%;
             max-width: 360px;
+            margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             padding: 0 10px 20px;
+            box-sizing: border-box;
         }
         .code-link {
             display: block;
@@ -44,6 +50,7 @@
             font-size: 16px;
             text-decoration: none;
             transition: all 0.2s ease;
+            box-sizing: border-box;
         }
         .code-link:hover {
             background: linear-gradient(135deg, #555, #333);
