--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </style>
 </head>
 <body>
-    <h1>以下のコードからご確認いただけます</h1>
+    <h1>ご希望の内容をお選びください</h1>
     <div class="container">
         <a class="code-link" href="https://x.com/otonahimatubu/status/1918304741114954055" target="_blank">A01 の続きを見る</a>
     </div>
