--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <body>
     <h1>ご希望の内容をお選びください</h1>
     <div class="container">
+        <a class="code-link" href="https://x.com/otonahimatubu/status/1918622122332807641" target="_blank">A03 の続きを見る</a>
         <a class="code-link" href="https://x.com/otonahimatubu/status/1918934049164259451" target="_blank">A02 の続きを見る</a>
         <a class="code-link" href="https://x.com/otonahimatubu/status/1918304741114954055" target="_blank">A01 の続きを見る</a>
     </div>
