--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 <body>
     <h1>ご希望の内容をお選びください</h1>
     <div class="container">
+        <a class="code-link" href="https://x.com/otonahimatubu" target="_blank">プロフィールへ</a>
         <a class="code-link" href="https://x.com/otonahimatubu/status/1920817023837233277" target="_blank">A07 の続きを見る</a>
         <a class="code-link" href="https://x.com/otonahimatubu/status/1919707786969010204" target="_blank">A06 の続きを見る</a>
         <a class="code-link" href="https://x.com/otonahimatubu/status/1919416005110960513" target="_blank">A05 の続きを見る</a>
