--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <h1>ご希望の内容をお選びください</h1>
     <div class="container">
         <a class="code-link" href="https://x.com/otonahimatubu" target="_blank">プロフィールへ</a>
+        <a class="code-link" href="https://x.com/otonahimatubu/status/1921578106940203457" target="_blank">A08 の続きを見る</a>
         <a class="code-link" href="https://x.com/otonahimatubu/status/1920817023837233277" target="_blank">A07 の続きを見る</a>
         <a class="code-link" href="https://x.com/otonahimatubu/status/1919707786969010204" target="_blank">A06 の続きを見る</a>
         <a class="code-link" href="https://x.com/otonahimatubu/status/1919416005110960513" target="_blank">A05 の続きを見る</a>
